--- a/README.mdx
+++ b/README.mdx
@@ -1,1 +1,8 @@
-Nothing to see here yet.
+# Welcome to Stablecraft
+
+This is the documentation homepage.
+
+## Sections
+
+- [Quick Guide](docs/quick-guide)
+- [Wallets & Custody](docs/wallets-and-custody)
