Documentation edits made through Mintlify web editor

--- a/README.mdx
+++ b/README.mdx
@@ -1,8 +1,42 @@
 # Welcome to Stablecraft
 
-This is the documentation homepage.
+Stablecraft is a knowledge base and service hub that bridges stablecoin technology with real-world applications.
+
+**Our docs cover topics like stablecoin payment integrations, wallet setup, stablecoin stress testing, and DeFi risk management — designed for builders, businesses, and blockchain enthusiasts.**
+
+## 📚 Documentation
+
+These docs are live and hosted at [docs.stablecraft.io](https://docs.stablecraft.io).
+
+## 🚀 Features
+
+- Stablecoin Payment Gateway Setup Guides
+- Wallet Management (Custodial and Non-Custodial)
+- On-Chain Checkout Integrations
+
+**Stablecoin Monitoring:**
+
+- Stress Test Framework
+- Liquidity Data and Monitoring
+- Risk Manager and Red Flag Tracking
+
+**Developer Tools:**
+
+- Sandbox API for Simulated Wallets, Transactions, and Rates
+
+---
+
+## 🛠️ Tech Stack
+
+- [Mintlify](https://mintlify.com) for documentation hosting
+- GitHub for source control and versioning
+- Custom deployment via GitHub Actions
+- Docusaurus for website creation
 
 ## Sections
 
 - [Quick Guide](docs/quick-guide)
 - [Wallets & Custody](docs/wallets-and-custody)
+
+📜 License
+© 2025 Stablecraft. All rights reserved.
